<resources>
    <string name="app_name">Clock</string>
    <string name="default_message">Time is up.</string>
    <string name="charge_activity_name">Rule</string>
    <string name="appwidget_text">0</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="lock_widget_description">Lock the screen</string>
    <string name="tts_activity_name">TTS</string>
    <string name="title_activity_chrome">ChromeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="home_page_title">Home Page</string>
    <string name="search_url">Search URL</string>
    <string name="start_page">Start Page</string>
    <string name="user_agent">User Agent</string>
    <string name="reply_title">Default reply action</string>
    <string name="block_rule">Block Rule</string>
    <string name="replace_rule">Replace Rule List</string>
    <string name="replace_title">Replace domain in proxy mode</string>
    <string name="dns_config_title">DNS Config</string>
    <string name="custom_dns_title">Custom DNS</string>


    <string name="ad_rule">Ad Block Rule</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_nettest_name">Net Test Activity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">History</string>
    <string name="tab_text_2">Bookmark</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="pc_user_agent" translatable="false">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.5280.47 Safari/537.36 Edg/97.0.664.52</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="open_in_background_tab">Open in new tab (background)</string>
    <string name="copy_link">Copy Link</string>
    <string name="default_useragent_str">Default User Agent</string>
    <string name="cached_tab_count">Cached Tab Count</string>
    <string name="user_script">User Script</string>
    <string name="can_copy_str">Can use copy on website</string>
    <string name="site_settings">Site Settings</string>
    <string name="cache_navigation">Cache Navigation</string>
    <string name="cache_navigation_global">Cache Navigation (Global)</string>
    <string name="allow_go_outside">Allow go outside</string>
    <string name="copy_title">Copy Title: %1$s</string>
    <string name="save_image">Save Image</string>
    <string name="basic_header">Basic</string>
    <string name="network_header">Network</string>
    <string name="extension_header">Extension</string>
    <string name="app_name_beta">Clock</string>
    <string name="title_activity_chrome_beta">ChromeActivity</string>
    <string name="title_other">Other</string>
    <string name="enable_debug">WebView debug</string>
    <string name="proxy_prefix_url_title">Proxy URL</string>
    <string name="using_inner_proxy_title">Using inner proxy</string>
    <string name="allow_auto_redirect">Allow auto redirect</string>
    <string name="clear_history">Clear history</string>
    <string name="custom_user_agent_title">Custom User Agent</string>
    <string name="no_js_title">Disable JavaScript</string>
</resources>