<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/basic_header">

<!--        <EditTextPreference-->
<!--            android:key="home_page"-->
<!--            android:title="@string/home_page_title" />-->

        <EditTextPreference
            android:key="search_url"
            android:title="@string/search_url" />

        <EditTextPreference
            android:key="start_page"
            android:title="@string/start_page" />

        <EditTextPreference
            android:key="custom_user_agent"
            android:title="@string/custom_user_agent_title" />

        <ListPreference
            android:entries="@array/user_agent_keys"
            android:entryValues="@array/user_agent_values"
            android:key="user_agent"
            android:title="@string/default_useragent_str" />

        <EditTextPreference
            android:inputType="number"
            android:key="cached_tab_count"
            android:title="@string/cached_tab_count" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/extension_header">

        <!--        <EditTextPreference-->
        <!--            android:key="block_rule"-->
        <!--            android:title="@string/block_rule"-->
        <!--             />-->

        <Preference
            android:fragment="com.example.clock.ui.main.EditFileFragment"
            android:key="ad_rule"
            android:title="@string/ad_rule"
            android:widgetLayout="@layout/preference_goto" />

        <Preference
            android:fragment="com.example.clock.ui.main.EditUserScriptFragment"
            android:key="user_script"
            android:title="@string/user_script"
            android:widgetLayout="@layout/preference_goto" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/network_header">

        <SwitchPreference
            android:key="enable_replace"
            android:title="@string/replace_title" />

        <Preference
            android:fragment="com.example.clock.ui.main.EditFileFragment"
            android:key="replace_rule"
            android:title="@string/replace_rule"
            android:widgetLayout="@layout/preference_goto" />

        <EditTextPreference
            android:key="dns_config"
            android:title="@string/dns_config_title" />

        <Preference
            android:fragment="com.example.clock.ui.main.EditFileFragment"
            android:key="custom_dns_list"
            android:title="@string/custom_dns_title"
            android:widgetLayout="@layout/preference_goto" />

        <SwitchPreference
            android:key="using_inner_proxy"
            android:title="@string/using_inner_proxy_title"
            android:defaultValue="false"/>

        <EditTextPreference
            android:dependency="using_inner_proxy"
            android:key="proxy_prefix_url"
            android:title="@string/proxy_prefix_url_title" />

        <SwitchPreference
            android:key="cache_navigation"
            android:title="@string/cache_navigation_global" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="can_copy"
            android:title="@string/can_copy_str" />

        <SwitchPreference
            android:dependency="can_copy"
            android:key="attachment"
            android:summaryOff="@string/attachment_summary_off"
            android:summaryOn="@string/attachment_summary_on"
            android:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_other">
        <SwitchPreference
            android:key="enable_debug"
            android:title="@string/enable_debug" />
    </PreferenceCategory>

</PreferenceScreen>